# AIoT

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/activity_classifier/: CMakeLists.txt  activity_classifier.c
components/activity_classifier/include/: activity_classifier.h
components/baro_driver/: CMakeLists.txt  baro_driver.c
components/baro_driver/include/: baro_driver.h
components/battery_monitor/: CMakeLists.txt  battery_monitor.c
components/battery_monitor/include/: battery_monitor.h
components/common/: CMakeLists.txt  i2c_shared.c
components/common/include/: i2c_shared.h  rescue_types.h
components/display_driver/: CMakeLists.txt  display_driver.c
components/display_driver/include/: display_driver.h
components/gnss_driver/: CMakeLists.txt  gnss_driver.c  nmea_parser.c
components/gnss_driver/include/: gnss_driver.h  nmea_parser.h
components/imu_driver/: CMakeLists.txt  imu_driver.c
components/imu_driver/include/: imu_driver.h
components/lora_driver/: CMakeLists.txt  lora_driver.c
components/lora_driver/include/: lora_driver.h
components/mag_driver/: CMakeLists.txt  mag_driver.c
components/mag_driver/include/: mag_driver.h
components/mesh_protocol/: CMakeLists.txt  mesh_protocol.c
components/mesh_protocol/include/: mesh_protocol.h
components/pdr/: CMakeLists.txt  pdr.c
components/pdr/include/: pdr.h
components/power_mgmt/: CMakeLists.txt  power_mgmt.c
components/state_machine/: CMakeLists.txt  state_machine.c
main/: CMakeLists.txt  app_config.h  main.c
sos_receiver/: sos_receiver.ino
(+2 files in other folders)
